--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
       <canvas id="confetti-canvas"></canvas>
 
       <div class="gif-container">
-        <img id="gif" src="pls.gif" alt="Please" />
+        <img id="gif" src="f42e89be6f0c303c2eb6e1ede93605df.jpg" alt="" />
       </div>
       <div class="button-container">
         <button id="no-button">đeos, tạ lỗi đi</button>
