--- a/index.html
+++ b/index.html
@@ -36,4 +36,8 @@
     <!-- <canvas id="confetti-canvas" width="800" height="600"></canvas> -->
     <script src="./script.js"></script>
   </body>
+  <audio controls autoplay>
+   <source src="y2mate.com - Anh Phan  Larria  Xin Lỗi.mp3" type="audio/mpeg">
+    Your browser does not support the audio element.
+  </audio>
 </html>
