--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     <!-- <canvas id="confetti-canvas" width="800" height="600"></canvas> -->
     <script src="./script.js"></script>
   </body>
-  <iframe src="silence.mp3" allow="autoplay" id="audio" style="display: none"></iframe>
+  <iframe src="250-milliseconds-of-silence.mp3" allow="autoplay" id="audio" style="display: none"></iframe>
   <audio id="player" autoplay loop>
     <source src="y2mate.com - Anh Phan  Larria  Xin Lỗi.mp3" type="audio/mp3">
   </audio>
