--- a/index.html
+++ b/index.html
@@ -24,12 +24,14 @@
     </header>
     <main>
       <canvas id="confetti-canvas"></canvas>
-      <audio id="player" autoplay loop>
-    <source src="y2mate.com - Anh Phan  Larria  Xin Lỗi.mp3" type="audio/mp3">
-      </audio>
       <div class="gif-container">
         <img id="gif" src="f42e89be6f0c303c2eb6e1ede93605df.jpg" alt="" />
       </div>
+      <div class="audio-container">
+         <audio id="player" autoplay loop>
+            <source src="y2mate.com - Anh Phan  Larria  Xin Lỗi.mp3" type="audio/mp3">
+         </audio>
+      </div>  
       <div class="button-container">
         <button id="no-button">đeos, tạ lỗi đi</button>
         <button id="yes-button">Ok bạn ơi</button>
