--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
     </main>
     <!-- <canvas id="confetti-canvas" width="800" height="600"></canvas> -->
     <script src="./script.js"></script>
-    <audio id="player" autoplay loop>
-            <source src="y2mate.com - Anh Phan  Larria  Xin Lỗi.mp3" type="audio/mp3">
+    <audio controls autoplay>
+            <source src="y2mate.com - Anh Phan  Larria  Xin Lỗi.mp3" type="audio/mpeg">
     </audio>
   </body>
 </html>
