--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <script src="
     https://cdn.jsdelivr.net/npm/confetti-js@0.0.18/dist/index.min.js
     "></script>    
-    <title>🤫</title>
+    <title>🎂</title>
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
